<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Teranga Food</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Janel Affranchis Proverbes MOKOMBA</string>
    <string name="nav_header_subtitle">proverbesaffranchis@outlook.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- My personal variables -->
    <string name="menu_meal">Menu</string>
    <string name="menu_help">Help</string>
    <string name="menu_maps">Location</string>
    <string name="menu_order">Order</string>
    <string name="menu_status">Cart</string>
    <string name="action_about">About us</string>
    <string name="welcome_text">Welcome to Teranga Food App</string>
    <string name="welcome_message">You are all welcome to our app ! The restaurant is also available for all types of events (birthdays, business meals, etc.). Do not hesitate to send us a request if you want to privatize it! See you soon !</string>
    <string name="welcome_choice">Make your choice</string>
    <string name="info_produit">Nasi Padang is a Padang steamed rice served with various choices of pre-cooked dishes originated from West Sumatra, Indonesia. It is known across Indonesia as Nasi Padang, after the city of Padang the capital of West Sumatra province.</string>
    <string name="menu_message">Our Catalogs</string>
    <string name="appetizer">Appetizers</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Desserts</string>
    <string name="error_field">Login ou mots de passe incorrect</string>
    <string name="refreshment">Refreshment</string>
    <string name="detail01">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_localisation_fragment">LocalisationFragment</string>

</resources>