<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_meal"
            android:icon="@drawable/ic_meal"
            android:title="@string/menu_meal" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_status"
            android:title="@string/menu_status"/>

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_maps"/>

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help"/>

    </group>
</menu>