<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.restoteranga.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_meal"
        android:name="com.example.restoteranga.MenuFragment"
        android:label="@string/menu_meal"
        tools:layout="@layout/fragment_menu"/>

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.restoteranga.MapsActivity"
        android:label="@string/menu_maps"
        tools:layout="@layout/activity_maps"/>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.restoteranga.Help"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help"/>

</navigation>