<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4">

            <!-- Main Image -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/all">

                    <ImageView
                        android:layout_gravity="top"
                        android:id="@+id/welcome"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/ic_ban"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="@dimen/all"/>

                    <TextView
                        android:textSize="@dimen/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_text"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginBottom="@dimen/all"/>

                    <TextView
                        android:textSize="@dimen/text_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginRight="@dimen/left"
                        android:text="@string/welcome_message"
                        android:justificationMode="inter_word"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Separate line -->
            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:padding="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/welcome_choice"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Menu Grid -->
            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:id="@+id/home_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/home_btn_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu"/>

                    <TextView
                        android:layout_marginTop="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_meal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/home_btn_cart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/status"/>

                    <TextView
                        android:layout_marginTop="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_status"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/home_btn_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/order"/>

                    <TextView
                        android:layout_marginTop="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_order"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/home_btn_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"/>

                    <TextView
                        android:layout_marginTop="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_maps"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="7dp"
                app:cardElevation="7dp"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/home_btn_help"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/help"/>

                    <TextView
                        android:layout_marginTop="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_help"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</LinearLayout>