<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4">


            <androidx.cardview.widget.CardView
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="@dimen/all"
                android:layout_marginBottom="@dimen/top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:padding="@dimen/all"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_title"
                        android:text="@string/menu_message"
                        android:gravity="center_horizontal" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_margin="@dimen/all"


                android:layout_marginBottom="@dimen/top">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/all">

                    <Button
                        android:layout_gravity="top"
                        android:id="@+id/appetizer"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/home2_desert"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="@dimen/all"
                        />


                    <TextView
                        android:layout_gravity="bottom"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginBottom="@dimen/all"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_margin="@dimen/all"


                android:layout_marginBottom="@dimen/top">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/all">

                    <Button
                        android:layout_gravity="top"
                        android:id="@+id/main_course"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/ic_ban"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="@dimen/all"
                        />


                    <TextView
                        android:layout_gravity="bottom"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginBottom="@dimen/all"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_margin="@dimen/all"


                android:layout_marginBottom="@dimen/top">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/all">

                    <Button
                        android:layout_gravity="top"
                        android:id="@+id/dessert"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/dessert1"
                        android:layout_marginBottom="@dimen/all"
                        />


                    <TextView
                        android:layout_gravity="bottom"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginBottom="@dimen/all"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_margin="@dimen/all"


                android:layout_marginBottom="@dimen/top">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/all">

                    <Button
                        android:layout_gravity="top"
                        android:id="@+id/refreshment"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/home_boison"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="@dimen/all"
                        />


                    <TextView
                        android:layout_gravity="bottom"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/refreshment"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/left"
                        android:layout_marginBottom="@dimen/all"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>
    </ScrollView>

</LinearLayout>